# Harvesting-Robot

./: .gitignore  AI识别系统优化总结.md  readme.md
robot/: bottle_detector.py  main.py  motor_servo_control.py  servo_controller.py  uart.py
robot_ROS2-6_9/: LIDAR_INTEGRATION_README.md  SLAM_MAPPING_README.md  launch_harvest_capture_test.py  采摘图像截取功能说明.md
robot_ROS2-6_9/scripts/: set_realtime_priority.sh
robot_ROS2-6_9/src/bottle_detection_ros2/: CMakeLists.txt  README_AI_OPTIMIZATION.md  package.xml  setup.cfg  setup.py
robot_ROS2-6_9/src/bottle_detection_ros2/bottle_detection_ros2/: README_STRUCTURE.md  __init__.py
robot_ROS2-6_9/src/bottle_detection_ros2/bottle_detection_ros2/core/: qos_profiles.py
robot_ROS2-6_9/src/bottle_detection_ros2/bottle_detection_ros2/core/hardware/: laser_obstacle_avoidance.py
robot_ROS2-6_9/src/bottle_detection_ros2/bottle_detection_ros2/core/vision/: bottle_detector.py  bottle_detector_async.py  harvest_image_cropper.py  stereo_camera.py
robot_ROS2-6_9/src/bottle_detection_ros2/bottle_detection_ros2/gui/: debug_visualizer_gui.py
robot_ROS2-6_9/src/bottle_detection_ros2/bottle_detection_ros2/nodes/communication/: websocket_bridge_node.py
robot_ROS2-6_9/src/bottle_detection_ros2/bottle_detection_ros2/nodes/control/: auto_harvest_controller.py  robot_control_node.py  servo_control_node.py
robot_ROS2-6_9/src/bottle_detection_ros2/bottle_detection_ros2/nodes/detection/: bottle_detection_node.py  bottle_detection_node_async.py  integrated_bottle_detection_node.py
robot_ROS2-6_9/src/bottle_detection_ros2/bottle_detection_ros2/nodes/navigation/: __init__.py  slam_mapping_node.py
robot_ROS2-6_9/src/bottle_detection_ros2/bottle_detection_ros2/nodes/testing/: __init__.py  fruit_image_publisher_node.py
robot_ROS2-6_9/src/bottle_detection_ros2/bottle_detection_ros2/utils/: utils.py
robot_ROS2-6_9/src/bottle_detection_ros2/config/: camera_params.yaml  high_performance.yaml  laser_avoidance_params.yaml  slam_mapping_params.yaml  system_config.yaml
robot_ROS2-6_9/src/bottle_detection_ros2/launch/: agrisage_with_lidar.launch.py  bottle_detection.launch.py  bottle_detection_async.launch.py  debug_nodes.launch.py  fruit_detection_test.launch.py  integrated_system.launch.py  slam_mapping.launch.py
robot_ROS2-6_9/src/bottle_detection_ros2/rviz/: slam_mapping.rviz
robot_ROS2-6_9/src/bottle_detection_ros2/scripts/: start_agrisage_with_lidar.sh  start_slam_mapping.sh  test_lidar_integration.py  test_system.py  verify_imports.py
robot_ROS2-6_9/src/bottle_detection_ros2/test/: bottle_detector_async.py  bottle_detector_test.py  bottle_rknn_pool.py  te.sh
robotarm_follow/config/: config.yaml
上位机与服务端/: client.py  server.py
微信小程序/: AI识别逻辑改进说明.md  README_REAL_DATA_UPDATE.md  recommendation字段显示问题修复说明.md  图片传输功能实现指南.md  图片显示问题修复指南.md  成熟度分析逻辑错误修复说明.md  服务端图片传输方案.md  本地图片管理指南.md  水果检测详情页面功能说明.md  水果识别数据修复验证指南.md  测试数据清除指南.md
机器臂/: config.yaml  read.py  跟随.py
(+128 files in other folders)
